@@ -62,7 +62,7 @@ pip install --upgrade ShopifyAPI
 
     ```python
     shop_url = "SHOP_NAME.myshopify.com"
-    api_version = '2024-01'
+    api_version = '2024-07'
     state = binascii.b2a_hex(os.urandom(15)).decode("utf-8")
     redirect_uri = "http://myapp.com/auth/shopify/callback"
     scopes = ['read_products', 'read_orders']
