@@ -38,6 +38,7 @@ class ApiVersion(object):
         cls.define_version(Release("2023-10"))
         cls.define_version(Release("2024-01"))
         cls.define_version(Release("2024-04"))
+        cls.define_version(Release("2024-07"))
 
     @classmethod
     def clear_defined_versions(cls):
